# fleki

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml
docs/: CENTRALIZED_KNOWLEDGE_INSTALL_AND_ROOT_PLAN_2026-04-03.md  CENTRALIZED_KNOWLEDGE_INSTALL_AND_ROOT_PLAN_2026-04-03_WORKLOG.md  CROSS_AGENT_MARKDOWN_WIKI_SYSTEM_2026-04-02.md  CROSS_AGENT_MARKDOWN_WIKI_SYSTEM_2026-04-02_WORKLOG.md  ELIMINATE_HEURISTIC_RETRIEVAL_AND_SCRIPTED_GUESSWORK_2026-04-03.md  ELIMINATE_HEURISTIC_RETRIEVAL_AND_SCRIPTED_GUESSWORK_2026-04-03_WORKLOG.md  INTERNAL_KNOWLEDGE_REVIEW_WIKI_DAEMON_PLAN_2026-04-03.md  INTERNAL_KNOWLEDGE_REVIEW_WIKI_DAEMON_PLAN_2026-04-03_WORKLOG.md  PDF_MARKDOWN_FIDELITY_RENDERING_PLAN_2026-04-03.md  PDF_MARKDOWN_FIDELITY_RENDERING_PLAN_2026-04-03_WORKLOG.md  SKILL_FIRST_SHARED_GRAPH_MUTATION_LOCKING_2026-04-03.md  TEMPORAL_KNOWLEDGE_FRESHNESS_AND_OPERATOR_CLARITY_2026-04-03.md  TEMPORAL_KNOWLEDGE_FRESHNESS_AND_OPERATOR_CLARITY_2026-04-03_WORKLOG.md  UNIVERSAL_ARTIFACT_PRESERVATION_AND_WIKI_EXPOSURE_2026-04-03.md  UNIVERSAL_ARTIFACT_PRESERVATION_AND_WIKI_EXPOSURE_2026-04-03_WORKLOG.md
knowledge/: README.md
scripts/: backfill_pdf_render_contract.py  backfill_source_family.py  install_knowledge_skill.py  sync_knowledge_runtime.py
tests/: common.py  test_backfill_pdf_render_contract.py  test_cli.py  test_contracts.py  test_frontmatter.py  test_install_targets.py  test_layout.py  test_pdf_rendering.py  test_rebuild.py  test_review_wiki_daemon.py  test_review_wiki_digest.py  test_review_wiki_exporter.py  test_review_wiki_install.py  test_review_wiki_service.py  test_runtime_manifests.py  test_save.py  (+3 more)
(+81 files in other folders)
